<resources>
    <string name="app_name">acc</string>

    <string name="main_label">Main Activity</string>
    <string name="second_label">Second Activity</string>

    //button
    <string name="start">Start Service</string>
    <string name="stop">Stop Service</string>
    <string name="random">Random</string>

    //data
    <string name="name">Name:</string>
    <string name="service">Services:</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="zero">0</string>
    <string name="got_number">got number</string>
    <string name="restart">restart</string>

</resources>
