<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#264653"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="105dp"
        android:layout_height="41dp"
        android:text="@string/name"
        android:textColor="#E8EAE1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:width="3dp"
        android:autofillHints="username"
        android:inputType="textPersonName"
        android:textColor="#E8EAE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/service_output"
        android:layout_width="105dp"
        android:layout_height="37dp"
        android:textColor="#E8EAE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/service"
        android:layout_width="105dp"
        android:layout_height="37dp"
        android:text="@string/service"
        android:textColor="#E8EAE1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/start"
        android:layout_width="412dp"
        android:layout_height="47dp"
        android:background="#e9c46a"
        android:shape="rectangle"
        android:text="@string/start"
        android:textColor="#E8EAE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/stop"
        android:layout_width="412dp"
        android:layout_height="47dp"
        android:background="#f4a261"
        android:text="@string/stop"
        android:textColor="#E8EAE1"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/random"
        android:layout_width="412dp"
        android:layout_height="47dp"
        android:background="#7E94B9"
        android:text="@string/random"
        android:textColor="#E8EAE1"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
